--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<htlm lang="en">
+<head>
+      <meta charset="UTF-8">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+    <tittle> project</tittle> 
+</head>
+<body>
+    <h1>  my nam is pavithra </h1>
+    <h1> i am a web developer </h1>
+    <h1> this is my project </h1> 
+  <h2>  <a href=" ./assets/images/SS.PNG"  > MY  PROJECT of birthday </a> </h2>
+       <img  src= "./assets/images/SS.png" height ="100" />
+    <h2><a href=" ./assets/images/movie-ranling"  > MY  PROJECT of movie </a> </h2>
+               <img  src= "./assets/images/movie-ranking.png" height = "200" />
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</body>
+</htlm>
